Installer-k3s/Ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-ingress
  namespace: development
spec:
  ingressClassName: nginx
  rules:
  - host: monorepo-apps
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: frontend
            port:
              number: 3000
      - path: /products
        pathType: Prefix
        backend:        
          service:
            name: products
            port:
              number: 3001
      - path: /shopping-cart
        pathType: Prefix
        backend:        
          service:
            name: shopping-cart
            port:
              number: 3002
